--- a/.gitignore
+++ b/.gitignore
@@ -106,6 +106,8 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
+!*.env.template
 .venv
 env/
 venv/
@@ -148,7 +150,6 @@ cython_debug/
 
 # Local .env files
 .env
-.env.*
 
 # Heroku
 /.heroku
